# python_ci_learn

./: .coverage  pyproject.toml
.github/actions/setup/: action.yaml
.github/actions/uv_setup/: action.yaml
.github/workflows/: build_uv_cache.yaml  code-quality.yaml
.github/workflows/build-cache/: action.yaml
src/ci_cd/: __init__.py
